--- a/sea_level/makefile
+++ b/sea_level/makefile
@@ -12,4 +12,5 @@ shared_subs.o: shared_subs.f90
 relative_plot_param: relative_plot_param.f90 shared_subs.o
 	$(FC) -o relative_plot_param $(FCFLAGS) relative_plot_param.f90 shared_subs.o
 
-
+extract_calc_sea_level: extract_calc_sea_level.f90 shared_subs.o
+	$(FC) -o extract_calc_sea_level $(FCFLAGS) extract_calc_sea_level.f90 shared_subs.o
