added plot script for plotting calculated sea level, as well as the score (fit) of observations and calculated sea level. Also added data for Boothia Peninsula

--- a/sea_level/makefile
+++ b/sea_level/makefile
@@ -14,3 +14,7 @@ relative_plot_param: relative_plot_param.f90 shared_subs.o
 
 extract_calc_sea_level: extract_calc_sea_level.f90 shared_subs.o
 	$(FC) -o extract_calc_sea_level $(FCFLAGS) extract_calc_sea_level.f90 shared_subs.o
+
+
+sl_diff_params: sl_diff_params.f90
+	$(FC) -o sl_diff_params $(FCFLAGS) sl_diff_params.f90
